Makin' it look neat !

--- a/popup.html
+++ b/popup.html
@@ -1,32 +1,27 @@
-<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title style="white-space: nowrap">YouTube Ad Blocker</title>
-    <link rel="stylesheet" type="text/css" href="popup.css" />
+    <link rel="stylesheet" type="text/css" href="css/popup.css" />
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
     />
-    <script src="popup.js"></script>
+    <script src="js/popup.js"></script>
   </head>
   <body>
     <br />
-    <h4>YouTube Ad Blocker</h4>
+    <h4>YOUTUBE AD BLOCKER</h4>
     <div id="button">
-      <button
-        type="submit"
-        id="toggle_button"
-        class="btn btn-success btn-sm button-34"
-      >
+      <button type="submit" id="toggle_button" class="btn btn-success btn-sm">
         Disable
       </button>
     </div>
-    <br>
-    <p>WRITTEN BY UZUKI DEVS</o>
+    <br />
+    <p>WRITTEN BY UZUKI DEVS</p>
   </body>
 </html>
