--- a/popup.html
+++ b/popup.html
@@ -16,11 +16,11 @@
   <body>
     <br />
     <h4>YOUTUBE AD BLOCKER</h4>
-    <div id="button">
-      <button type="submit" id="toggle_button" class="btn btn-success btn-sm">
+    <center>
+      <button class="button-62" id="toggle_button" role="button">
         Disable
       </button>
-    </div>
+    </center>
     <br />
     <p>WRITTEN BY UZUKI DEVS</p>
   </body>
